test/src/e2e_vm_tests/test_programs/should_pass/dca/unused_struct/src/main.sw
script;

struct S {}

fn main() {}
