test/src/e2e_vm_tests/test_programs/should_fail/recursive_struct/src/main.sw
script;

struct S {
  Eins: bool,
  Zwei: u64,
  Drei: S,
}

fn main() {

}
